# sentinel

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  run.ps1  run.sh
fixtures/: sample_alerts.json  sample_commits.json  sample_deploys.json
runbooks/: checkout-5xx.md  database-incident.md  service-latency.md
scripts/: simulate.py
sentinel/: __init__.py  config.py  models.py
sentinel/adapters/: __init__.py  base.py  factory.py  github_mock.py  metrics_mock.py  runbook_store_mock.py  slack_mock.py
sentinel/api/: __init__.py  main.py
sentinel/llm/: __init__.py  client.py  prompts.py
sentinel/pipeline/: __init__.py  brief.py  correlate.py  impact.py  orchestrator.py  postmortem.py  runbook.py
sentinel/store/: __init__.py  incidents.py
tests/: conftest.py  test_brief.py  test_correlate.py  test_impact.py  test_orchestrator.py  test_postmortem.py  test_runbook.py
